- Implemented the products' list by seller
