# src/main/java/com/market/products/controllers/ProductController.java
@@ -5,11 +5,12 @@ import com.market.products.model.Product;
 import com.market.products.model.ProductListResponse;
 import com.market.products.services.ProductService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 import javax.validation.Valid;
+
+import java.util.List;
 
 import static org.springframework.http.HttpStatus.*;
 
@@ -26,8 +27,12 @@ public class ProductController extends BaseController implements ProductsApi {
     }
 
     @Override
-    public ResponseEntity<ProductListResponse> listProducts() {
-        return null;
+    public ResponseEntity<ProductListResponse> listProducts(String idSeller) {
+        List<Product> products = this.productService.findByIdSeller(idSeller);
+        ProductListResponse productListResponse = new ProductListResponse();
+        productListResponse.addAll(products);
+
+        return new ResponseEntity<>(productListResponse, OK);
     }
 
     @Override
